--- a/common/new_commands.tex
+++ b/common/new_commands.tex
@@ -31,3 +31,5 @@
   {\par\vspace{\abovedisplayskip}\noindent
    \tabularx{\columnwidth}{>{$}l<{$} @{${}={}$} >{\raggedright\arraybackslash}X}}
   {\endtabularx\par\vspace{\belowdisplayskip}}
+
+\newtheorem{theorem}{Teorema}
